# iroh-chat-lib

./: Cargo.toml
.iroh-dir/: blobs.db  default-author  docs.redb  keypair
src/: cli.rs  client.rs  iroh.rs  iroh_client.rs  lib.rs  main.rs  message.rs  sample_functions.rs
src/.iroh-dir/: blobs.db  default-author  docs.redb  keypair
src/messages/: basic.rs  generated.rs  mod.rs
