[package]
name = "iroh-chat-cli"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "7.3.0"
prost = "0.13.0"
tokio = {version = "*", features = ["rt", "macros"]}
iroh = "0.30"
iroh-docs = {version = "0.30", features=["rpc"]}
iroh-blobs = {version = "0.30", features=["rpc"]}
iroh-gossip = {version = "0.30", features=["rpc"]}
serde = {version = "*", features = ["derive"]}
serde_bytes="*"
bincode = "1.3.3"
quic-rpc = "0.17.3"
anyhow = "1.0.95"
dialoguer = "0.11.0"
futures-lite = "2.6.0"
